overflow fix

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -15,6 +15,7 @@ canvas {
   height: 100%;
   background-color: #2f2f2f;
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 .particles-js-canvas-el {
